Checkstyle fixes second round